--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <li>Request correction of inaccurate information.</li>
         <li>Request deletion of your account and data (subject to organizational retention policies).</li>
     </ul>
-    <p>To exercise these rights, please contact your organization's administrator.</li>
+    <p>To exercise these rights, please contact your organization's administrator.</p>
 
     <h2>8. Changes to This Privacy Policy</h2>
     <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last updated" date.</p>
